<resources>
    <string name="app_name">08.1.intent-1</string>
    <string name="activitySum">Go to ActivitySum</string>
    <string name="activitySumData">Go to ActivitySum Data</string>
    <string name="goActivity2">Go to Activity2</string>
    <string name="backActivity1">Back to Activity1</string>
    <string name="activity1">Activity 1</string>
    <string name="activity2">Activity 2</string>
    <string name="tabActivity">Go to Tab Activity</string>
</resources>
